Bring the library up-to-date.